# ai-dev-yodoq

./: .gitignore  .mise.toml  FINAL_ACHIEVEMENT_REPORT.md  LAYOUT_GUIDE.md  LAYOUT_REVIEW_SUMMARY.md  README.md  analyze_slide_density.js  day1_2.md  diagram_prompts.md  generate_actionable_report.js  index.html  package.json  pyproject.toml  screenshot_all_slides.js  verify_completion.sh  verify_layout.py
slides/: .build.config  .gitignore  .mise.toml  AI_Development_Training_2Days.html  BEFORE_AFTER_CLASS_CHANGES.md  BEFORE_AFTER_EXAMPLES.md  BUILD_FLOW.txt  BUILD_SUMMARY.md  CONTENT_BUDGET_OPTIMIZATION_REPORT.md  CONVERSION_REPORT.md  CONVERSION_SUMMARY.txt  DENSITY_FIX_SUMMARY.md  DIRECTORY_RESTRUCTURE_PROPOSAL.md  EXECUTIVE_SUMMARY.md  FAIL_SLIDES_FIX_REPORT.md  FINAL_TEST_REPORT.md  GITHUB_PAGES.md  GRADE_A_ACHIEVEMENT_REPORT.md  ITERATION_5_GRADE_A_PLUS_PUSH.md  LAYOUT_CHANGES_DETAILED.md  LAYOUT_CHANGES_FINAL_REPORT.md  LAYOUT_CHEATSHEET.md  LAYOUT_RECOMMENDATION_SPEC.md  LAYOUT_REDESIGN_REPORT.md  LAYOUT_REVIEW_COMPLETE.md  LAYOUT_SELECTION_GUIDE.md  LAYOUT_VALIDATION_REPORT.md  MODERN_TOOLING.md  Makefile  NEW_LAYOUT_PROPOSALS.md  OVERFLOW_FIX_COMPLETE_REPORT.md  OVERFLOW_FIX_SUMMARY.md  QUALITY_IMPROVEMENT_REPORT.md  README.md  REGENERATION_STATUS.md  REPOSITORY_RESTRUCTURE_PROPOSAL.md  RESTRUCTURE_OPTIONS_COMPARISON.md  SLIDECTL_FINAL_SUMMARY.md  SLIDECTL_ITERATION_2_REPORT.md  SLIDECTL_ITERATION_3_REPORT.md  (+102 more)
slides/.logs/: ACTIONABLE_SLIDES.txt  EXECUTIVE_SUMMARY.md  VISUAL_DENSITY_ANALYSIS.md  actionable_slides.json  content_budget_analysis.json  (+12 more)
(+128 files in other folders)
